# Parrator

./: .gitattributes  .gitignore  CLAUDE.md  FUNASR_INTEGRATION.md  Parrator.spec  README.md  README_INFERENCE_SERVER.md  demo_cleanup.py  package-lock.json  pyproject.toml  test_funasr.py  test_funasr_simple.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: setup.ps1  start-dev-services.ps1  start-inference-server.ps1
.github/workflows/: claude-code.yml  droid-code-review.yml  generate-lock-windows.yml  opencode.yml  test-windows.yml  windows-build.yml
docker/: Dockerfile.win  build.ps1  run.ps1
inference_server/: server.py
parrator/: __init__.py  __main__.py  audio_recorder.py  config.py  engine_client.py  hotkey_manager.py  notifications.py  startup.py  text_refiner.py  transcriber.py  tray_app.py
parrator/cleanup/: __init__.py  engine_base.py  http_engine.py  llm_engine.py  manager.py  rule_engine.py
tests/: __init__.py  test_cleanup.py  test_performance.py
